--- a/package.json
+++ b/package.json
@@ -36,10 +36,10 @@
   },
   "homepage": "https://github.com/cameronhimself/vue-drag-drop#readme",
   "devDependencies": {
-    "babel-core": "^6.26.0",
+    "babel-core": "^6.26.3",
     "babel-eslint": "^7.2.3",
     "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.0",
+    "babel-preset-env": "^1.7.0",
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.5",
     "eslint": "^4.5.0",
@@ -50,7 +50,7 @@
     "eslint-plugin-standard": "^3.0.1",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
-    "node-sass": "^4.5.3",
+    "node-sass": "^4.9.2",
     "sass-loader": "^6.0.6",
     "vue-loader": "^13.0.4",
     "vue-template-compiler": "^2.4.2",
@@ -58,6 +58,7 @@
     "webpack-merge": "^4.1.0"
   },
   "dependencies": {
-    "core-js": "^2.5.3"
+    "core-js": "^2.5.3",
+    "mobile-drag-drop": "^2.3.0-rc.1"
   }
 }
